--- a/MyCity4Kids/MyCity4Kids/res/drawable/profile_analytics_btn_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/profile_analytics_btn_bg.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/app_red" />
+        android:color="@color/white" />
 
-    <solid android:color="@color/app_red" />
+    <solid android:color="@color/white" />
 
     <padding
         android:bottom="1dp"
