--- a/MyCity4Kids/MyCity4Kids/res/layout/spinner_row.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/spinner_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -8,11 +9,22 @@
         android:id="@+id/tvCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:textColor="@color/black"
         android:textSize="17sp" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/report_spam_spinner_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_margin="@dimen/space_10"
+        android:textColor="@color/grey_faded"
+        android:textSize="14sp"
+        android:visibility="gone"
+        app:fontName="Roboto-Regular.ttf" />
 
 </RelativeLayout>
