--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -526,4 +526,8 @@
     <color name="campaign_listing_light_green_bottom">#4AC670</color>
     <color name="color_37C4AC">#37C4AC</color>
     <color name="color_EFF9F8">#EFF9F8</color>
+    <color name="color_85848A">#85848A</color>
+    <color name="color_DADADA">#DADADA</color>">
+    <color name="color_B4536A">#B4536A</color>
+    <color name="color_F1F1F1">#F1F1F1</color>
 </resources>
