--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -83,4 +83,11 @@
     <dimen name="space_90">90dp</dimen>
     <dimen name="space_44">44dp</dimen>
     <dimen name="space_16">16dp</dimen>
+    <dimen name="space_70">70dp</dimen>
+    <dimen name="space_66">66dp</dimen>
+    <dimen name="space_3">3dp</dimen>
+    <dimen name="space_55">55dp</dimen>
+    <dimen name="space_85">85dp</dimen>
+    <dimen name="space_74">74dp</dimen>
+    <dimen name="space_115">115dp</dimen>
 </resources>
