--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_carousel_container.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_carousel_container.xml
@@ -30,7 +30,7 @@
 
     </RelativeLayout>
 
-    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <HorizontalScrollView
         android:id="@+id/videoCarouselContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -105,10 +105,9 @@
 
                         <com.mycity4kids.widget.CustomFontTextView
                             android:id="@+id/campaign_name"
-                            android:layout_width="wrap_content"
+                            android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="7dp"
-                            android:layout_marginLeft="7dp"
                             android:layout_marginTop="4dp"
                             android:ellipsize="end"
                             android:maxLines="2"
@@ -208,7 +207,7 @@
 
                         <com.mycity4kids.widget.CustomFontTextView
                             android:id="@+id/campaign_name2"
-                            android:layout_width="wrap_content"
+                            android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="7dp"
                             android:layout_marginLeft="7dp"
@@ -311,7 +310,7 @@
 
                         <com.mycity4kids.widget.CustomFontTextView
                             android:id="@+id/campaign_name3"
-                            android:layout_width="wrap_content"
+                            android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="7dp"
                             android:layout_marginLeft="7dp"
@@ -415,7 +414,7 @@
 
                         <com.mycity4kids.widget.CustomFontTextView
                             android:id="@+id/campaign_name4"
-                            android:layout_width="wrap_content"
+                            android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="7dp"
                             android:layout_marginLeft="7dp"
@@ -518,7 +517,7 @@
 
                         <com.mycity4kids.widget.CustomFontTextView
                             android:id="@+id/campaign_name5"
-                            android:layout_width="wrap_content"
+                            android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="7dp"
                             android:layout_marginLeft="7dp"
