--- a/MyCity4Kids/MyCity4Kids/res/layout/dynamic_child_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/dynamic_child_view.xml
@@ -44,7 +44,7 @@
                 android:textColor="@color/app_red"
                 android:textSize="14sp"
                 android:visibility="visible"
-                app:fontName="oswald_regular.ttf" />
+                app:fontName="OpenSans-Regular.ttf" />
 
         </LinearLayout>
 
