--- a/MyCity4Kids/MyCity4Kids/res/layout/header2_item_recycler.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/header2_item_recycler.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#5e6d9e"
+    android:background="@color/white"
     android:padding="5dp">
 
     <ImageView
         android:id="@+id/tab1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/tab1"
+        android:src="@drawable/profile_creator_tab_selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/divider1"
         app:layout_constraintHorizontal_bias="0.5"
@@ -32,7 +32,7 @@
         android:id="@+id/tab2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/tab1"
+        android:src="@drawable/profile_featured_tab_selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/divider2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -55,7 +55,7 @@
         android:id="@+id/tab3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/tab1"
+        android:src="@drawable/profile_bookmarks_tab_selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
