--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -534,4 +534,5 @@
     <color name="color_DADADA">#DADADA</color>">
     <color name="color_B4536A">#B4536A</color>
     <color name="color_F1F1F1">#F1F1F1</color>
+    <color name="color_CB9797">#CB9797</color>
 </resources>
